--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
          spark my interest. Dream On! ">
 			<meta name="author" content="Shubhashish Argha" />
 			<link rel="icon" href="favicon.ico" />
+		
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155149232-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155149232-1');
+</script>
+
+		
 			<style>
          html {
          height:100%;
