--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 			height:100%;
 		}
 	</style>
-	<!-- copy these lines to your document head: -->
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155149232-1"></script>
@@ -40,20 +39,14 @@
 	<link href='https://fonts.googleapis.com/css?family=Archivo&subset=latin' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Archivo:italic&subset=latin' rel='stylesheet' type='text/css'>
 
-	<!-- end copy -->
   </head>
   <body>
-	<!-- copy these lines to your document: -->
 
-	<div id="sargha_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:544px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="sargha.hyperesources/sargha_hype_generated_script.js?82040"></script>
+	<div id="update_hype_container" class="HYPE_document" style="margin:auto;position:relative;width:320px;height:544px;overflow:hidden;">
+		<script type="text/javascript" charset="utf-8" src="update.hyperesources/update_hype_generated_script.js?23430"></script>
 	</div>
 
-	<!-- end copy -->
 	
-
-
-	<!-- text content for search engines: -->
 
 	<div style="display:none" aria-hidden=true>
 
@@ -399,8 +392,6 @@ My research on natural language processing in politics is linked below:  
 4. The Social Impact of Natural Language Processing</div>
 
 	</div>
-
-	<!-- end text content: -->
 
   </body>
 </html>
