--- a/index.html
+++ b/index.html
@@ -1,38 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Shubhashish Argha</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
-</head>
-<body>
-	
-			
-
-	<div class="flex-w flex-str size1 overlay1">
-		<div class="flex-w flex-col-sb wsize1 bg0 p-l-65 p-t-37 p-b-50 p-r-80 respon1">	
-	
-			<div class="w-full flex-c-m p-t-80 p-b-90">
-				<div class="wsize2">
-					<h3 class="l1-txt1 p-b-24 respon3">
-						Shubhashish Argha
-					</h3>
-
-
-					<p class="m2-txt1 p-b-46" align="middle">
-						<br> My Website's Under Construction </br>
-						<br> Connect with me on <a href="https://www.linkedin.com/in/shubhashishargha/">Linkedin </a> </br>
-					</p>
-
-					
-				</div>
-			</div>
-			
-		
-		</div>
-
-</body>
-</html>
+<html>
+   <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="chrome=1,IE=edge" />
+	<title>Shubhashish Argha | Portfolio </title>
+	<meta name="description" content="Second-year engineering student at the University of Michigan,
+         pursuing a degree in Electrical Engineering. When I'm not working on class
+         work you can find me dreaming up new projects and exploring new fields that
+         spark my interest. Dream On! ">
+	<meta name="author" content="Shubhashish Argha" />
+	<link rel="icon" href="favicon.ico" />
+      <meta http-equiv = "refresh" content = "0; url = https://calendly.com/sargha/chat" />
+   </head>
+</html> 
